# DavideMeta_TodoList

./: Attivita.h  CMakeLists.txt  MyApp.cpp  MyApp.h  MyFrame.cpp  MyFrame.h  TodoList.h  main.cpp
test/: Attivita_test.cpp  CMakeLists.txt  TodoList_test.cpp  runAllTest.cpp
